; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/pt1/extr_va1j5jf8007s.c_va1j5jf8007s_read_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/pt1/extr_va1j5jf8007s.c_va1j5jf8007s_read_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.va1j5jf8007s_state* }
%struct.va1j5jf8007s_state = type { i32 }

@FE_HAS_SIGNAL = common dso_local global i32 0, align 4
@FE_HAS_CARRIER = common dso_local global i32 0, align 4
@FE_HAS_LOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @va1j5jf8007s_read_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @va1j5jf8007s_read_status(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.va1j5jf8007s_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %8 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %7, i32 0, i32 0
  %9 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %8, align 8
  store %struct.va1j5jf8007s_state* %9, %struct.va1j5jf8007s_state** %6, align 8
  %10 = load %struct.va1j5jf8007s_state*, %struct.va1j5jf8007s_state** %6, align 8
  %11 = getelementptr inbounds %struct.va1j5jf8007s_state, %struct.va1j5jf8007s_state* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %36 [
    i32 134, label %13
    i32 133, label %13
    i32 132, label %13
    i32 131, label %13
    i32 137, label %13
    i32 130, label %15
    i32 136, label %15
    i32 129, label %20
    i32 135, label %20
    i32 128, label %27
  ]

13:                                               ; preds = %2, %2, %2, %2, %2
  %14 = load i32*, i32** %5, align 8
  store i32 0, i32* %14, align 4
  store i32 0, i32* %3, align 4
  br label %38

15:                                               ; preds = %2, %2
  %16 = load i32, i32* @FE_HAS_SIGNAL, align 4
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %17, align 4
  %19 = or i32 %18, %16
  store i32 %19, i32* %17, align 4
  store i32 0, i32* %3, align 4
  br label %38

20:                                               ; preds = %2, %2
  %21 = load i32, i32* @FE_HAS_SIGNAL, align 4
  %22 = load i32, i32* @FE_HAS_CARRIER, align 4
  %23 = or i32 %21, %22
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %24, align 4
  %26 = or i32 %25, %23
  store i32 %26, i32* %24, align 4
  store i32 0, i32* %3, align 4
  br label %38

27:                                               ; preds = %2
  %28 = load i32, i32* @FE_HAS_SIGNAL, align 4
  %29 = load i32, i32* @FE_HAS_CARRIER, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @FE_HAS_LOCK, align 4
  %32 = or i32 %30, %31
  %33 = load i32*, i32** %5, align 8
  %34 = load i32, i32* %33, align 4
  %35 = or i32 %34, %32
  store i32 %35, i32* %33, align 4
  store i32 0, i32* %3, align 4
  br label %38

36:                                               ; preds = %2
  %37 = call i32 (...) @BUG()
  br label %38

38:                                               ; preds = %36, %27, %20, %15, %13
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
